Fix the search box alignment

--- a/src/components/a.css
+++ b/src/components/a.css
@@ -1,57 +1,51 @@
-
-
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-*{
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Roboto';
+  font-family: "Roboto";
 }
-nav{
+nav {
   margin-top: 90px;
   position: fixed;
   z-index: 99;
   width: 100%;
-  
+
   background: #fff;
   height: 180px;
-  
 }
 
-nav .wrapper{
+nav .wrapper {
   position: relative;
-  max-width: 1300px;
+  max-width: 1400px;
   padding: 0px 30px;
-  height: 70px;
-  line-height: 70px;
+  height: 100%;
+  line-height: 50px;
   margin: auto;
   display: flex;
-  align-items: center;
+  align-items: top;
   justify-content: space-between;
-  margin-top: 20px;
   opacity: 80;
 }
-.wrapper .logo a{
+.wrapper .logo a {
   color: #000;
   font-size: 30px;
   font-weight: 900;
   text-decoration: none;
-  font-family: 'Roboto';
- 
+  font-family: "Roboto";
 }
 img {
-  margin-top: 40px;
-  width: 120px;
-  height: 120px;
+  margin: 20px 10px;
+  width: 110px;
+  height: 110px;
 }
-.wrapper .nav-links{
+.wrapper .nav-links {
   display: inline-flex;
 }
-.nav-links li{
+.nav-links li {
   list-style: none;
 }
-.nav-links li a{
+.nav-links li a {
   color: #000;
   text-decoration: none;
   font-size: 18px;
@@ -60,16 +54,15 @@ img {
   border-radius: 5px;
   transition: all 0.3s ease;
 }
-.nav-links li a:hover{
+.nav-links li a:hover {
   background: #006aff;
   color: #fff;
   font-weight: 900;
-  
 }
-.nav-links .mobile-item{
+.nav-links .mobile-item {
   display: none;
 }
-.nav-links .drop-menu{
+.nav-links .drop-menu {
   position: absolute;
   background: #fff;
   width: 180px;
@@ -77,23 +70,23 @@ img {
   top: 85px;
   opacity: 0;
   visibility: hidden;
-  box-shadow: 0 6px 10px rgba(0,0,0,0.15);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
 }
 .nav-links li:hover .drop-menu,
-.nav-links li:hover .mega-box{
+.nav-links li:hover .mega-box {
   transition: all 0.3s ease;
   top: 70px;
   opacity: 1;
   visibility: visible;
 }
-.drop-menu li a{
+.drop-menu li a {
   width: 100%;
   display: block;
   padding: 0 0 0 15px;
   font-weight: 400;
   border-radius: 0px;
 }
-.mega-box{
+.mega-box {
   position: absolute;
   left: 0;
   width: 100%;
@@ -102,24 +95,24 @@ img {
   opacity: 0;
   visibility: hidden;
 }
-.mega-box .content{
+.mega-box .content {
   background: #fff;
   padding: 25px 20px;
   display: flex;
   width: 100%;
   justify-content: space-between;
-  box-shadow: 0 6px 10px rgba(0,0,0,0.15);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
 }
-.mega-box .content .row{
+.mega-box .content .row {
   width: calc(35% - 30px);
   line-height: 45px;
 }
-.content .row img{
+.content .row img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-.content .row header{
+.content .row header {
   color: #000;
   font-size: 20px;
   font-weight: 500;
@@ -127,26 +120,23 @@ img {
   margin-bottom: 0px;
   margin-left: -40px;
 }
-.content .row .mega-links{
+.content .row .mega-links {
   margin-left: -6px;
   border-left: 1px solid rgba(37, 27, 27, 0.3);
- 
 }
-.row .mega-links li{
+.row .mega-links li {
   padding: 0 20px;
-  
 }
-.row .mega-links li a{
-
+.row .mega-links li a {
   padding: 0 20px;
   color: #000;
   font-size: 16px;
   display: block;
 }
-.row .mega-links li a:hover{
+.row .mega-links li a:hover {
   color: #f2f2f2;
 }
-.s-btn{
+.s-btn {
   color: #fff;
   font-size: 20px;
   cursor: pointer;
@@ -160,17 +150,17 @@ img {
   display: none;
   background-color: #006aff;
 }
-.wrapper .btn.close-btn{
+.wrapper .btn.close-btn {
   position: absolute;
   right: 30px;
   top: 10px;
 }
 
 @media screen and (max-width: 970px) {
-  .wrapper .btn{
+  .wrapper .btn {
     display: block;
   }
-  .wrapper .nav-links{
+  .wrapper .nav-links {
     position: fixed;
     height: 100vh;
     width: 100%;
@@ -182,7 +172,7 @@ img {
     padding: 50px 10px;
     line-height: 50px;
     overflow-y: auto;
-    box-shadow: 0px 15px 15px rgba(0,0,0,0.18);
+    box-shadow: 0px 15px 15px rgba(0, 0, 0, 0.18);
     transition: all 0.3s ease;
   }
   /* custom scroll bar */
@@ -193,26 +183,26 @@ img {
     background: #242526;
   }
   ::-webkit-scrollbar-thumb {
-    background: #3A3B3C;
+    background: #3a3b3c;
   }
-  #menu-btn:checked ~ .nav-links{
+  #menu-btn:checked ~ .nav-links {
     left: 0%;
   }
-  #menu-btn:checked ~ .btn.menu-btn{
+  #menu-btn:checked ~ .btn.menu-btn {
     display: none;
   }
-  #close-btn:checked ~ .btn.menu-btn{
+  #close-btn:checked ~ .btn.menu-btn {
     display: block;
   }
-  .nav-links li{
+  .nav-links li {
     margin: 15px 10px;
   }
-  .nav-links li a{
+  .nav-links li a {
     padding: 0 20px;
     display: block;
     font-size: 20px;
   }
-  .nav-links .drop-menu{
+  .nav-links .drop-menu {
     position: static;
     opacity: 1;
     top: 65px;
@@ -225,13 +215,13 @@ img {
     transition: all 0.3s ease;
   }
   #showDrop:checked ~ .drop-menu,
-  #showMega:checked ~ .mega-box{
+  #showMega:checked ~ .mega-box {
     max-height: 100%;
   }
-  .nav-links .desktop-item{
+  .nav-links .desktop-item {
     display: none;
   }
-  .nav-links .mobile-item{
+  .nav-links .mobile-item {
     display: block;
     color: #000;
     font-size: 20px;
@@ -241,17 +231,17 @@ img {
     border-radius: 5px;
     transition: all 0.3s ease;
   }
-  .nav-links .mobile-item:hover{
+  .nav-links .mobile-item:hover {
     background: #006aff;
   }
-  .drop-menu li{
+  .drop-menu li {
     margin: 0;
   }
-  .drop-menu li a{
+  .drop-menu li a {
     border-radius: 5px;
     font-size: 18px;
   }
-  .mega-box{
+  .mega-box {
     position: static;
     top: 65px;
     opacity: 1;
@@ -261,33 +251,58 @@ img {
     overflow: hidden;
     transition: all 0.3s ease;
   }
-  .mega-box .content{
+  .mega-box .content {
     box-shadow: none;
     flex-direction: column;
     padding: 20px 20px 0 20px;
   }
-  .mega-box .content .row{
+  .mega-box .content .row {
     width: 100%;
     margin-bottom: 15px;
-    border-top: 1px solid rgba(255,255,255,0.08);
+    border-top: 1px solid rgba(255, 255, 255, 0.08);
   }
   .mega-box .content .row:nth-child(1),
-  .mega-box .content .row:nth-child(2){
+  .mega-box .content .row:nth-child(2) {
     border-top: 0px;
   }
-  .content .row .mega-links{
+  .content .row .mega-links {
     border-left: 0px;
     padding-left: 15px;
   }
-  .row .mega-links li{
+  .row .mega-links li {
     margin: 0;
-    
   }
-  .content .row header{
+  .content .row header {
     font-size: 19px;
   }
 }
-nav input{
+nav input {
   display: none;
 }
 
+/* search box alignment */
+.nav-search-box,
+.nav-search-box * {
+  width: 100%;
+}
+
+.input-group .form-control {
+  font-size: 2rem;
+  height: 4rem;
+  border-radius: 5px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.navbar-right-panel {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 25px auto;
+}
+
+.nav-links * {
+  margin: 0 10px;
+  margin-bottom: 0;
+}
